<resources>
    <string name="app_name">Practica Examen</string>

    <string name="agregar_asignatura">Agregar nueva asignatura</string>
    <string name="modificar_asignatura">Modificar asignatura</string>
    <string name="eliminar_asignatura">Eliminar asignatura</string>

    <string name="btnAgrega">Agregar nueva asignatura</string>
    <string name="btnMostrar">Mostrar asignaturas en curso</string>
    <string name="btnModifica">Modificar asignatura</string>
    <string name="btnElimina">Eliinar asignatura</string>
    <string name="btnSalir">Salir</string>
    <string name="no">No Finalizada</string>
    <string name="nombre">Nombre</string>
    <string name="curso">Curso</string>
    <string name="cuatri">Cuatrimestre</string>
    <string name="nota"> Nota</string>
    <string name="si">Finalizada</string>
    <string name="profesor">Profesor</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="btnmuestracabadas">Muestra asignaturas acabadas</string>


</resources>

