<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#CCFFFFFF"
        android:gravity="center"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="#e71414"
            android:textSize="30dp"
            android:text="@string/modificar_asignatura"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:layout_marginTop="120dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:id="@+id/nombre2"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:textSize="20dp"/>

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/nombre12"
            android:textColor="#000000"
            android:layout_marginLeft="100dp"
            android:textSize="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profesor"
            android:id="@+id/profesor2"
            android:textColor="#000000"
            android:layout_marginTop="55dp"
            android:textSize="20dp"/>

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/profesor12"
            android:textColor="#000000"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="50dp"
            android:textSize="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cuatri"
            android:id="@+id/cuatri2"
            android:textColor="#000000"
            android:layout_marginTop="100dp"
            android:textSize="20dp"/>

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/cuatri12"
            android:textColor="#000000"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="95dp"
            android:textSize="10dp"/>

        <RadioGroup android:id="@+id/finalizada2"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Rb12"
                android:layout_marginTop="200dp"
                android:text="@string/si"/>

            <RadioButton android:id="@+id/Rb22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curso"
            android:id="@+id/curso2"
            android:textColor="#000000"
            android:layout_marginTop="150dp"
            android:textSize="20dp"/>

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/curso12"
            android:textColor="#000000"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="145dp"
            android:textSize="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nota"
            android:id="@+id/nota2"
            android:textColor="#000000"
            android:visibility="invisible"
            android:layout_marginTop="220dp"
            android:layout_marginLeft="150dp"
            android:textSize="20dp"/>

        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/nota12"
            android:textColor="#000000"
            android:visibility="invisible"
            android:layout_marginLeft="210dp"
            android:layout_marginTop="215dp"
            android:textSize="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="280dp"
            android:layout_marginLeft="50dp"
            android:id="@+id/cancelar2"
            android:text="@string/cancelar"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="280dp"
            android:layout_marginLeft="200dp"
            android:id="@+id/aceptar2"
            android:text="@string/aceptar"/>

    </RelativeLayout>

</RelativeLayout>