<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.ub.pis2016.mmanjarrez.practica2.VisionAsignatura">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#CCFFFFFF"
        android:gravity="center"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="#e71414"
            android:textSize="30dp"
            android:id="@+id/asig"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:layout_marginTop="120dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profesor"
            android:id="@+id/profesor"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profe1"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:text="a"
            android:layout_marginLeft="150dp"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cuatri"
            android:id="@+id/cuatri"
            android:textColor="#000000"
            android:layout_marginTop="55dp"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cuatri1"
            android:textColor="#000000"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="55dp"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nota"
            android:id="@+id/nota"
            android:textColor="#000000"
            android:layout_marginTop="100dp"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nota1"
            android:textColor="#000000"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="100dp"
            android:textSize="20dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curso"
            android:id="@+id/curso"
            android:textColor="#000000"
            android:layout_marginTop="150dp"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/curso1"
            android:textColor="#000000"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="150dp"
            android:textSize="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="220dp"
            android:layout_marginLeft="30dp"
            android:id="@+id/eliminar"
            android:text="Eliminar"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="220dp"
            android:layout_marginLeft="180dp"
            android:id="@+id/modifi"
            android:text="Modificar"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="280dp"
            android:layout_marginLeft="100dp"
            android:id="@+id/volver"
            android:text="Volver"/>

    </RelativeLayout>

</RelativeLayout>
